fix: Prevent flickering of content on load
The old scroll reveal ux method

--- a/src/resources/scss/main.scss
+++ b/src/resources/scss/main.scss
@@ -210,6 +210,11 @@
 @import "base/all";
 @import "components/all";
 
+
+html.sr .load-hidden {
+  visibility: hidden;
+}
+
 body {
   background-attachment: fixed;
   background-image: url("/bg.svg");
